# kdl_learning

./: CMakeLists.txt  README.md  package.xml
src/: ae_clik_use_exo_constraint.cpp  ae_clik_use_prediction.cpp  ae_online_training.cpp  ae_predict_constraint_clik.cpp  fk_data_conv.cpp  fkine.cpp  main.cpp  master_control_lbr_clik.cpp  master_control_xmate.cpp  master_control_xmate_clik.cpp  master_control_xmate_clik_logconstraint.cpp  master_control_yumi.cpp  master_fk.cpp  testnode.cpp  ur_iksolver.cpp  vive_control_xmate.cpp  vive_control_xmate_clik.cpp  xmate_iksolver.cpp
